centered navbar items and fixed x overflow issues

--- a/src/css/components/navbar.scss
+++ b/src/css/components/navbar.scss
@@ -6,6 +6,12 @@
   height: 40px;
   width: 100%;
 
+  .section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .about {
     flex: 1 0 auto;
     background: green;
