--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,5 @@
 body {
   height: 100vh;
-  width: 100vw;
   background: #FFFFFF;
   margin: 0;
 
@@ -10,5 +9,5 @@ body {
 
 .slide {
   height: 100%;
-  width: 100vw;
+  width: 100%;
 } 
